--- a/.github/workflows/rclone-action.yml
+++ b/.github/workflows/rclone-action.yml
@@ -27,7 +27,7 @@ jobs:
         uses: z-shell/.github/actions/rclone@v1.0.5
         with:
           config: ${{ secrets.R2_STORE }}
-          args: "sync ${{ env.local_path }} ${{ env.r2_remote_path }}"
+          args: "copy ${{ env.local_path }} ${{ env.r2_remote_path }}"
           debug: false
         #- name: "⏫ Run rclone/cdn"
         #uses: z-shell/.github/actions/rclone@v1.0.5
