--- a/.github/workflows/check-sh.yml
+++ b/.github/workflows/check-sh.yml
@@ -12,13 +12,17 @@ on:
       - ".github/workflows/check-sh.yml"
   workflow_dispatch: {}
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   shellcheck:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.2.0
       - name: ☑️ ShellCheck
-        uses: ludeeus/action-shellcheck@master
+        uses: ludeeus/action-shellcheck@6d3f514f44620b9d4488e380339edc0d9bbe2fba
         with:
           scandir: "./lib/sh"
   run-install:
@@ -29,9 +33,6 @@ jobs:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     needs: [shellcheck]
-    concurrency:
-      group: ci-${{ github.workflow }}-${{ github.ref }}
-      cancel-in-progress: false
     steps:
       - uses: actions/checkout@v3.2.0
       - uses: rlespinasse/github-slug-action@v4
@@ -55,7 +56,7 @@ jobs:
           command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a zunit
           command rm -rf ~/.zi
-          sh -x ./lib/sh/install.sh -- -a zpmod
+          sh -x ./lib/sh/install-zpmod.sh
       - name: 🍎 Install on MacOS
         if: startsWith(matrix.os, 'macos')
         run: |
@@ -67,4 +68,4 @@ jobs:
           command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a zunit
           command rm -rf ~/.zi
-          sh -x ./lib/sh/install.sh -- -a zpmod
+          sh -x ./lib/sh/install-zpmod.sh
