--- a/.github/workflows/check-sh.yml
+++ b/.github/workflows/check-sh.yml
@@ -40,11 +40,11 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu-latest')
         run: |
           sudo apt-get update
-          sudo apt-get install -y curl git zsh
+          sudo apt-get install -y zsh
       - name: 🍎 Dependencies (MacOS)
         if: startsWith(matrix.os, 'macos')
         run: |
-          brew install curl zsh
+          brew install zsh
       - name: 🐧 Install on Linux
         if: startsWith(matrix.os, 'ubuntu')
         run: |
@@ -56,7 +56,7 @@ jobs:
           command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a zunit
           command rm -rf ~/.zi
-          sh -x ./lib/sh/install-zpmod.sh
+          sh -x ./lib/sh/install_zpmod.sh
       - name: 🍎 Install on MacOS
         if: startsWith(matrix.os, 'macos')
         run: |
@@ -68,4 +68,4 @@ jobs:
           command rm -rf ~/.zi
           sh -x ./lib/sh/install.sh -- -a zunit
           command rm -rf ~/.zi
-          sh -x ./lib/sh/install-zpmod.sh
+          sh -x ./lib/sh/install_zpmod.sh
