--- a/.github/workflows/rclone-action.yml
+++ b/.github/workflows/rclone-action.yml
@@ -3,7 +3,8 @@ name: "🔄 Rclone"
 on:
   push:
     paths:
-      - "lib/**"
+      - lib/**
+  issue_comment: /rclone
   workflow_dispatch: {}
 
 concurrency:
