--- a/.github/workflows/check-macos.yml
+++ b/.github/workflows/check-macos.yml
@@ -1,5 +1,6 @@
 ---
-name: 🐧 Check (Linux)
+name: 🍎 Check (MacOS)
+
 on:
   push:
     branches: [main]
@@ -35,10 +36,9 @@ jobs:
     steps:
       - name: ⤵️ Check out code from GitHub
         uses: actions/checkout@v3.2.0
-      - name: ⚙️ Prepare dependencies
+      - name: ⚙️  Prepare dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y zsh
+          brew install zsh
       - name: "⚙️  Check: install.sh -- -i skip"
         run: sh -x ./lib/sh/install.sh -- -i skip; command rm -rf ~/.zi
       - name: "⚙️  Check: install.sh -- -i annex"
