ci(maintenance): 🚀 update config files
Signed-off-by: Salvydas Lukosius <sall@w-ss.io>

--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -14,7 +14,7 @@ on:
       environment:
         description: "Choose an environment to deploy to: <dev|staging|prod>"
         required: true
-        default: "dev"
+        default: "prod"
 
 jobs:
   deploy:
