--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,10 +1,10 @@
 version: 0.1
 cli:
-  version: 1.3.1
+  version: 1.6.1
 plugins:
   sources:
     - id: trunk
-      ref: v0.0.8
+      ref: v0.0.13
       uri: https://github.com/trunk-io/plugins
 repo:
   repo:
@@ -12,23 +12,25 @@ repo:
     owner: z-shell
     name: zi-src
 lint:
+  disabled:
+    - yamllint
   enabled:
-    - git-diff-check@SYSTEM
-    - actionlint@1.6.22
-    - gitleaks@8.15.2
+    - actionlint@1.6.23
+    - git-diff-check
+    - gitleaks@8.16.1
     - markdownlint@0.33.0
-    - prettier@2.8.2
+    - prettier@2.8.4
     - shellcheck@0.9.0
     - shfmt@3.5.0
     - taplo@0.7.0
+runtimes:
+  enabled:
+    - go@1.19.5
+    - node@18.12.1
+    - python@3.10.8
 actions:
   enabled:
     - trunk-announce
     - trunk-check-pre-push
     - trunk-fmt-pre-commit
     - trunk-upgrade-available
-    - trunk-cache-prune
-runtimes:
-  enabled:
-    - go@1.18.3
-    - node@16.14.2
