--- a/.github/workflows/trunk-check.yml
+++ b/.github/workflows/trunk-check.yml
@@ -25,6 +25,6 @@ jobs:
   upgrade:
     if: github.event.schedule == '0 07 * * 5'
     name: "✨ Upgrade"
-    uses: z-shell/.github/.github/workflows/trunk.yml@v1.0.7
+    uses: z-shell/.github/.github/workflows/trunk.yml@main
     with:
       upgrade_action: true
