--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -4,7 +4,7 @@ cli:
 plugins:
   sources:
     - id: trunk
-      ref: v1.2.1
+      ref: v1.2.3
       uri: https://github.com/trunk-io/plugins
 repo:
   repo:
@@ -12,6 +12,12 @@ repo:
     owner: z-shell
     name: zi-src
 lint:
+  disabled:
+    - yamllint
+    - trufflehog
+    - renovate
+    - checkov
+    - trivy
   enabled:
     - git-diff-check@SYSTEM
     - actionlint@1.6.25
@@ -19,7 +25,7 @@ lint:
     - markdownlint@0.36.0
     - prettier@3.0.3
     - shellcheck@0.9.0
-    - shfmt@3.5.0
+    - shfmt@3.6.0
     - taplo@0.8.1
 actions:
   enabled:
@@ -30,5 +36,6 @@ actions:
     - trunk-cache-prune
 runtimes:
   enabled:
-    - go@1.18.3
-    - node@16.14.2
+    - python@3.10.8
+    - go@1.21.0
+    - node@18.12.1
