--- a/.github/workflows/rclone-action.yml
+++ b/.github/workflows/rclone-action.yml
@@ -20,9 +20,9 @@ jobs:
       remote_path: "r2:r2-store/src"
     steps:
       - name: "⤵️ Check out code from GitHub"
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
       - name: "⏫ Run rclone/r2-store"
-        uses: z-shell/.github/actions/rclone@e05244c5e45f1d8b3921a984b188726b6970e262
+        uses: z-shell/.github/actions/rclone@main
         with:
           config: ${{ secrets.R2_STORE }}
           args: "copy --check-first ${{ env.local_path }} ${{ env.remote_path }}"
